--- a/webapp/views/base/layout.html
+++ b/webapp/views/base/layout.html
@@ -84,7 +84,7 @@
       </a>
 
       <!-- Header Navbar: style can be found in header.less -->
-      <nav class="navbar navbar-static-top" role="navigation">
+      <nav class="navbar navbar-static-top shadow" role="navigation">
         <!-- Sidebar toggle button-->
         <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button" id="collapseButton">
           <span class="sr-only">Toggle navigation</span>
@@ -232,22 +232,25 @@
 
         </div>
       </section><!-- /.content -->
+      <br /><br /><br />
+      <nav class="navbar navbar-fixed-bottom footer shadow">
+          <div class="container">
+              <span class="imgs">
+                <img id="inpe-image" src="{[ BASE_URL ]}images/inpe.png">
+              </span>
+              <span class="imgs">
+                <img id="programa-queimadas-image" src="{[ BASE_URL ]}images/programa_queimadas.png">
+              </span>
+              <span class="imgs">
+                <img id="defra-image" src="{[ BASE_URL ]}images/defra.png">
+              </span>
+              <span class="imgs">
+                <img id="world-bank-image" src="{[ BASE_URL ]}images/banco_mundial.png">
+              </span>
+          </div>
+        </nav>
     </div><!-- /.content-wrapper -->
-
-    <div id="institutions-logos">
-      <span class="imgs">
-        <img id="inpe-image" src="{[ BASE_URL ]}images/inpe.png">
-      </span>
-      <span class="imgs">
-        <img id="programa-queimadas-image" src="{[ BASE_URL ]}images/programa_queimadas.png">
-      </span>
-      <span class="imgs">
-        <img id="defra-image" src="{[ BASE_URL ]}images/defra.png">
-      </span>
-      <span class="imgs">
-        <img id="world-bank-image" src="{[ BASE_URL ]}images/banco_mundial.png">
-      </span>
-    </div>
+    
   </div>
   <!-- ./wrapper -->
 
