--- a/webapp/views/login.html
+++ b/webapp/views/login.html
@@ -42,7 +42,7 @@
                 margin-top: 0 !important;
             }
 
-            #institutions-logos {
+            .footer {
                 text-align: center;
             }
 
@@ -94,7 +94,7 @@
                         </div><!-- /.col -->
                         <div class="col-md-12"><hr/></div>
                         <div class="col-md-12">
-                            <div id="institutions-logos">
+                            <div class="footer">
                                 <span class="imgs">
                                     <img id="inpe-image" src="{[ BASE_URL ]}images/inpe.png">
                                 </span>
