--- a/webapp/public/javascripts/angular/data-series/templates/storager.html
+++ b/webapp/public/javascripts/angular/data-series/templates/storager.html
@@ -78,14 +78,15 @@
     <div class="col-md-12">
       <div class="row">
         <div class="box-body table-responsive no-padding">
-
-          <table class="dcpTableStore table table-striped" style="width: 100%;">
-            <thead>
-              <tr>
-                <th ng-repeat="field in $ctrl.tableFieldsStoragerDataTable">{{ $ctrl.i18n.__($ctrl.options.capitalizeIt(field)) }}</th>
-              </tr>
-            </thead>
-          </table>
+          <div class="table-responsive">
+            <table class="dcpTableStore table table-striped" style="width: 100%;">
+              <thead>
+                <tr>
+                  <th ng-repeat="field in $ctrl.tableFieldsStoragerDataTable">{{ $ctrl.i18n.__($ctrl.options.capitalizeIt(field)) }}</th>
+                </tr>
+              </thead>
+            </table>
+          </div>
         </div><!-- /.box-body -->
       </div>
     </div>
