--- a/webapp/public/stylesheets/terrama2.css
+++ b/webapp/public/stylesheets/terrama2.css
@@ -597,15 +597,17 @@ table.dataTable tbody th, table.dataTable tbody td { padding-left: 12px !importa
   width: 90px;
 }
 
-#institutions-logos {
-  text-align: center;
-  bottom: 0;
-  position: absolute;
-  z-index: 999;
-  width: 230px;
-  border: 2px solid;
-  left: 0;
-  background-color: #e0e0e0;
+.shadow{
+  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
+}
+
+.shadow-sm {
+  box-shadow: 0 .125rem .25rem rgba(0,0,0,.075)!important;
+}
+
+.footer {
+  text-align: center !important;
+  background-color: #f8f9fa!important;
 }
 
 .imgs img {
@@ -737,3 +739,21 @@ table.dataTable tbody th, table.dataTable tbody td { padding-left: 12px !importa
   color: gray !important;
   cursor: auto !important;
 }
+
+@media screen and (max-width: 991px){
+  .btn-sm-block{
+    display: block !important;
+    width: 100% !important;
+    margin-bottom: 10px !important;
+  }
+  .btn-sm-lg{
+    padding: .5rem 1rem;
+    font-size: 1.25rem;
+    line-height: 1.5;
+    border-radius: .3rem;
+  }
+  .pull-right, .pull-left, .btn.pull-left, .btn.pull-right {
+    float: none !important
+  }
+}
+
